# recsys-off-policy-eval

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_recommenders.ipynb  03_off_policy_eval.ipynb  04_policy_comparison.ipynb  05_contextual_bandits.ipynb
src/data/: load.py
src/evaluation/: ranking.py
src/ope/: bandits.py  estimators.py
src/recommenders/: ials.py  popularity.py
tests/: test_bandits.py  test_ope.py  test_ranking.py  test_recommenders.py
